--- a/build.gradle
+++ b/build.gradle
@@ -13,12 +13,14 @@ repositories {
 }
 
 dependencies {
+	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	compileOnly 'org.projectlombok:lombok'
+	runtimeOnly 'com.microsoft.sqlserver:mssql-jdbc'
+	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	implementation 'org.projectlombok:lombok:1.18.26'
-	implementation group: 'org.springframework.data', name: 'spring-data-jpa', version: '3.1.0'
-	implementation group: 'com.microsoft.sqlserver', name: 'mssql-jdbc', version: '12.3.0.jre20-preview'
-	annotationProcessor 'org.projectlombok:lombok:1.18.26'
+	implementation group: 'javax.persistence', name: 'javax.persistence-api', version: '2.2'
 }
 
 tasks.named('test') {
